--- a/P000624.opf/meta.yml
+++ b/P000624.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P000624
+id: P000624
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG3397
   title: འདུལ་བ་མདོའི་དགོངས་པ་གསལ་བར་བྱེད་པ།
-  volume: ''
   author: ''
+  volumes: ''
