--- a/P000624.opf/meta.yml
+++ b/P000624.opf/meta.yml
@@ -4,4 +4,14 @@ source_metadata:
   id: bdr:W1KG3397
   title: འདུལ་བ་མདོའི་དགོངས་པ་གསལ་བར་བྱེད་པ།
   author: ''
-  volumes: ''
+  volumes:
+    67b4df8bc5a64e60855f632fbaacbfd0:
+      image_group_id: I1KG3475
+      title: ''
+      volume_number: 1
+      total_pages: 1040
+    766f571a04ed4575bd02450f46f0b953:
+      image_group_id: I1KG3476
+      title: ''
+      volume_number: 2
+      total_pages: 940
