--- a/P000624.opf/layers/v001/Pagination.yml
+++ b/P000624.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4bd36e6757bf41b08a491a819fc356c3
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   0695e73fb4c345db8acfbf29b98e68dc:
