--- a/P000624.opf/layers/v002/Pagination.yml
+++ b/P000624.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: c347360a075d437185403b74c799037c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   fe03ed76d35a45039d7cacbb47bc86fa:
